--- a/src/claw-machine.css
+++ b/src/claw-machine.css
@@ -82,22 +82,27 @@ h1 {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 60px;
+    width: 50px;
     height: 100%;
     transition: left 0.3s ease;
+    display: flex;
+    justify-content: center;
 }
 
 .claw {
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .claw-cable {
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    margin-left: -1.5px;
     width: 3px;
     height: 0%;
     background: linear-gradient(to bottom, #333, #666);
@@ -109,7 +114,7 @@ h1 {
     position: absolute;
     top: var(--cable-length, 0px);
     left: 50%;
-    transform: translateX(-50%);
+    margin-left: -25px;
     width: 50px;
     height: 50px;
     transition: top 0.1s ease;
@@ -172,7 +177,7 @@ h1 {
     border-radius: 0;
     background: transparent;
     border: none;
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
     cursor: pointer;
     transform-origin: center bottom;
 }
